# vertex_py_yyjson

./: .bumpversion.cfg  LICENSE  codecov.yml  pyproject.toml
.circleci/: config.yml
scripts/: smoke.py
tests/: test_document.py  test_numbers.py
yyjson/: __init__.py  document.c  document.h
