[build-system]
requires = ["setuptools>=74.1"]
build-backend = "setuptools.build_meta"

[project]
name = "vtx-yyjson"
version = "4.3.0"
description = "JSON parser & serializer built on yyjson"
readme = "README.md"
authors = [
    {name = "The Vertex Project LLC", email = "root@vertex.link" },
    {name = "Tyler Kennedy", email = "tk@tkte.ch" },
]
license = "MIT"
license-files = [ "LICENSE" ]
keywords = ["json", "parser", "serializer", "patcher"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://vertex.link"
Repository = "https://github.com/vertexproject/vertex_py_yyjson/tree/vtx_main"

[project.optional-dependencies]
test = ["pytest"]
release = [
    "sphinx",
    "sphinx-copybutton",
    "ghp-import",
    "bumpversion",
    "black",
    "furo"
]

[tool.setuptools]
ext-modules = [
    { name = "cyyjson", sources = ["yyjson/binding.c", "yyjson/yyjson.c", "yyjson/memory.c", "yyjson/document.c"], py-limited-api = true}
]
packages = ["yyjson"]

[tool.cibuildwheel]
test-command = [ 'python -c "import yyjson; print(yyjson.__package__)"' ]

[tool.cibuildwheel.linux]
build = "cp311-manylinux_x86_64 cp312-manylinux_x86_64 cp313-manylinux_x86_64"

[tool.cibuildwheel.macos]
archs = "universal2"
build = "cp311-* cp312-* cp313-*"
